--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Quiz app</title>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <h1>Thư viện câu hỏi</h1>
