--- a/index.html
+++ b/index.html
@@ -3,34 +3,36 @@
   <head>
     <meta charset="UTF-8">
     <title>Quiz app</title>
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>Câu hỏi tư duy tuyển sinh học sinh, sinh viên mới nhất</h1>
     <div class="quiz-container">
-      <h2>Question text</h2>
-      <ul>
-        <li>
-          <input type="radio" id="A" name="answer"/>
-          <label for="A">Question</label>
-        </li>
-        <li>
-          <input type="radio" id="B" name="answer"/>
-          <label for="B">Question</label>
-        </li>
-        <li>
-          <input type="radio" id="C" name="answer"/>
-          <label for="C">Question</label>
-        </li>
-        <li>
-          <input type="radio" id="D" name="answer"/>
-          <label for="D">Question</label>
-        </li>
-        <li>
-          <input type="radio" id="E" name="answer"/>
-          <label for="E">Question</label>
-        </li>
-      </ul>
+      <div class="quiz-header">
+        <h2>Question text</h2>
+        <ul>
+          <li>
+            <input type="radio" id="A" name="answer"/>
+            <label for="A">Question</label>
+          </li>
+          <li>
+            <input type="radio" id="B" name="answer"/>
+            <label for="B">Question</label>
+          </li>
+          <li>
+            <input type="radio" id="C" name="answer"/>
+            <label for="C">Question</label>
+          </li>
+          <li>
+            <input type="radio" id="D" name="answer"/>
+            <label for="D">Question</label>
+          </li>
+          <li>
+            <input type="radio" id="E" name="answer"/>
+            <label for="E">Question</label>
+          </li>
+        </ul>
+      </div>
       <button>Trả lời</button>
     </div>
   </body>
